search itunes api for author search, progress

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,17 @@
 </head>
 <body>
     <div id="books">
+        <div v-if="showBooks">{{ authorSearch }}</div>
         <input v-model="authorSearch"/>
+        <button @click="search">Search for Author</button>
+        <div v-for="result in results">
+            <a :href="result.trackViewUrl">
+                <img :src="result.artworkUrl100.replace('100x100bb', '300x300bb')"/>
+                <div v-text="result.trackName"></div>
+            </a>
+        </div>
     </div>
 
+    <script src="app.js"></script>
 </body>
 </html>
